...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/esp1"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="#353535"
            android:textSize="30sp"
...
